# Dlib_Workshop

./: README.txt
FacialRecon/: CMakeLists.txt  compile.sh
FacialRecon/Ressources/: test.txt
FacialRecon/src/: exercice_facialRecon.cpp  exercice_facialRecon.cpp~  facialRecon.cpp
dlib-19.19/dlib/opencv/: #cv_image.h#
dlib-19.19/examples/: #webcam_face_pose_ex.cpp#  CMakeLists.txt  CMakeLists.txt~  webcam_face_pose_ex.cpp  webcam_face_pose_ex.cpp~
face_recognition/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  face_recognition  face_recognition.cpp
face_recognition/dlib_build/: Makefile  cmake_install.cmake
